force-app/main/default/objects/Plan__c/fields/Circumstances__c.field-meta.xml
<CustomField>
    <fullName>Circumstances__c</fullName>
    <label>Circumstances</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>