force-app/main/default/objects/Plan__c/fields/Consequences__c.field-meta.xml
<CustomField>
    <fullName>Consequences__c</fullName>
    <label>Consequences</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>