force-app/main/default/objects/Plan__c/fields/Data_Json_for_Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>Data_Json_for_Signature_Request__c</fullName>
    <label>Data Json for Signature Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>