force-app/main/default/objects/Plan__c/fields/Expected_Length_of_Placement_Months__c.field-meta.xml
<CustomField>
    <fullName>Expected_Length_of_Placement_Months__c</fullName>
    <label>Expected Length of Placement (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>