force-app/main/default/objects/Plan__c/fields/Field_Blueprint_JSON__c.field-meta.xml
<CustomField>
    <fullName>Field_Blueprint_JSON__c</fullName>
    <label>Field Blueprint JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>