force-app/main/default/objects/Plan__c/fields/Parent_Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Child_Name__c</fullName>
    <label>Parent Child Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>