force-app/main/default/objects/Plan__c/fields/Parent_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipName>Parent_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>