force-app/main/default/objects/Plan__c/fields/Parent_Plan_F__c.field-meta.xml
<CustomField>
    <fullName>Parent_Plan_F__c</fullName>
    <formula>IF(
    ISBLANK(Parent_Plan__c),
    &apos;&apos;,
    HYPERLINK(&apos;/&apos; &amp; Parent_Plan__c, Parent_Plan__r.Name, &apos;_blank&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Plan</label>
    <type>Text</type>
</CustomField>