force-app/main/default/objects/Plan__c/fields/Placement_Agency_City__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_City__c</fullName>
    <label>Placement Agency City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>