force-app/main/default/objects/Plan__c/fields/Placement_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Agency Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>