force-app/main/default/objects/Plan__c/fields/Placement_Agency_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_Phone_Number__c</fullName>
    <label>Placement Agency Phone Number</label>
    <type>Phone</type>
</CustomField>