force-app/main/default/objects/Plan__c/fields/Placement_Agency_State__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_State__c</fullName>
    <label>Placement Agency State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>