force-app/main/default/objects/Plan__c/fields/Placement_Agency_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_Street_Address__c</fullName>
    <label>Placement Agency Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>