force-app/main/default/objects/Plan__c/fields/Placement_Agency_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_Zip_Code__c</fullName>
    <label>Placement Agency Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>