force-app/main/default/objects/Plan__c/fields/Placement_Setting__c.field-meta.xml
<CustomField>
    <fullName>Placement_Setting__c</fullName>
    <label>Placement Setting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Placement_Setting</valueSetName>
    </valueSet>
</CustomField>