force-app/main/default/objects/Plan__c/fields/Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Placement_Type__c</fullName>
    <label>Placement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Placement_Type</valueSetName>
    </valueSet>
</CustomField>