force-app/main/default/objects/Plan__c/fields/Plan_Date_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Plan_Date_Accepted__c</fullName>
    <label>Plan Accepted Date</label>
    <type>Date</type>
</CustomField>