force-app/main/default/objects/Plan__c/fields/Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Plan_Description__c</fullName>
    <label>Plan Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>