force-app/main/default/objects/Plan__c/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>