force-app/main/default/objects/Plan__c/fields/Plan_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Signed_Date__c</fullName>
    <label>Signature Date</label>
    <type>Date</type>
</CustomField>