force-app/main/default/objects/Plan__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Accepted - New</fullName>
            </value>
            <value>
                <fullName>Not Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>