force-app/main/default/objects/Plan__c/fields/Plan_Status_F__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status_F__c</fullName>
    <formula>TEXT(Plan_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Status</label>
    <type>Text</type>
</CustomField>