force-app/main/default/objects/Plan__c/fields/Plan_Type_F__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type_F__c</fullName>
    <formula>Plan_Type_Txt__c</formula>
    <label>Plan Type</label>
    <type>Text</type>
</CustomField>