force-app/main/default/objects/Plan__c/fields/Plan_Type_Txt__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type_Txt__c</fullName>
    <label>Plan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>