force-app/main/default/objects/Plan__c/fields/Plan_Version__c.field-meta.xml
<CustomField>
    <fullName>Plan_Version__c</fullName>
    <label>Plan Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>