force-app/main/default/objects/Plan__c/fields/Plan_Version_F__c.field-meta.xml
<CustomField>
    <fullName>Plan_Version_F__c</fullName>
    <formula>Plan_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Version</label>
    <type>Text</type>
</CustomField>