force-app/main/default/objects/Plan__c/fields/Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Progress_Status__c</fullName>
    <label>Plan Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Plan_Status</valueSetName>
    </valueSet>
</CustomField>