force-app/main/default/objects/Plan__c/fields/Request_Signature_Counter__c.field-meta.xml
<CustomField>
    <fullName>Request_Signature_Counter__c</fullName>
    <label>Request Signature Counter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>