force-app/main/default/objects/Plan__c/fields/Request_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Signature_Date__c</fullName>
    <label>Request Signature Date</label>
    <type>DateTime</type>
</CustomField>