force-app/main/default/objects/Plan__c/fields/Request_Signature_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Signature_Link_Status__c</fullName>
    <label>Request Signature Link Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Triggered</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Link 1 Expired</fullName>
            </value>
            <value>
                <fullName>Link 2 Expired</fullName>
            </value>
            <value>
                <fullName>Link 3 Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>