force-app/main/default/objects/Plan__c/fields/Request_Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_Signature_URL__c</fullName>
    <label>Request Signature URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>