force-app/main/default/objects/Plan__c/fields/Specific_Threats_to_Child_Safety__c.field-meta.xml
<CustomField>
    <fullName>Specific_Threats_to_Child_Safety__c</fullName>
    <label>Specific Threats to Child Safety</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>