force-app/main/default/objects/Plan__c/validationRules/Accepted_Date_Greater_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Date_Greater_Than_Today</fullName>
    <active>true</active>
    <errorConditionFormula>Plan_Date_Accepted__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Plan Accepted Date cannot be greater than today&apos;s date.</errorMessage>
</ValidationRule>