force-app/main/default/objects/Plan__c/validationRules/End_Date_Less_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Less_Than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Plan_End_Date__c &lt; Plan_Start_Date__c</errorConditionFormula>
    <errorMessage>Plan End Date cannot be less than Plan Start Date.</errorMessage>
</ValidationRule>