force-app/main/default/objects/Plan__c/validationRules/Future_Plan_Sign_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Plan_Sign_Date</fullName>
    <active>true</active>
    <description>Signature Date cannot be greater than today&apos;s date.</description>
    <errorConditionFormula>Plan_Signed_Date__c  &gt; TODAY()</errorConditionFormula>
    <errorMessage>Signature Date cannot be greater than today&apos;s date.</errorMessage>
</ValidationRule>