force-app/main/default/objects/Plan__c/validationRules/Start_Date_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Null</fullName>
    <active>true</active>
    <errorConditionFormula>Plan_Start_Date__c = null || ISNULL(Plan_Start_Date__c) || ISBLANK(Plan_Start_Date__c)</errorConditionFormula>
    <errorMessage>Plan Start Date cannot be empty.</errorMessage>
</ValidationRule>