force-app/main/default/objects/Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plan_Version__c</columns>
    <columns>Plan_Type_F__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>